# PriceScrapy

./: .gitignore  pyproject.toml  run.py  run_tests.sh
.github/workflows/: pythonapp.yml
pricescrapy/: __init__.py  main.py
tests/: test_pricescrapy.py
