[tool.poetry]
name = "PriceScrapy"
version = "0.1.0"
description = ""
authors = ["Jonathan Harder <jonharder6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
