[tool.poetry]
name = "PriceScrapy"
version = "0.1.0"
description = ""
authors = ["Jonathan Harder <jonharder6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
flake8 = "^3.7.9"

[tool.poetry.scripts]
run = "pricescrapy.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
